syntax = "proto3";

package tasks.v1;

import "google/api/annotations.proto";

service TaskService {
  rpc GetAllTasks(GetAllTasksRequest) returns (GetAllTasksResponse) {
    option (google.api.http) = {
      get : "/tasks"
    };
  };
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {
    option (google.api.http) = {
      post : "/tasks"
      body : "*"
    };
  };
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {
    option (google.api.http) = {
      delete : "/tasks/{id}"
    };
  };
  rpc GetOneTask(GetOneTaskRequest) returns (GetOneTaskResponse) {
    option (google.api.http) = {
      get : "/tasks/{id}"
    };
  };
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {
    option (google.api.http) = {
      put : "/tasks/{id}"
      body : "*"
    };
  };
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
}

message GetAllTasksRequest {}

message GetAllTasksResponse { repeated Task tasks = 1; }

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message CreateTaskResponse {}

message DeleteTaskRequest { string id = 1; }

message DeleteTaskResponse {}

message GetOneTaskRequest { string id = 1; }

message GetOneTaskResponse { Task task = 1; }

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}

message UpdateTaskResponse {}
